--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="social-links">
         <a href="https://twitter.com/iam_tamodip" class="twitter"><i class="icofont-twitter"></i></a>
         <a href="https://www.facebook.com/iamtamodip" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="https://www.instagram.com/tom_221b/" class="instagram"><i class="icofont-instagram"></i></a>
+        <a href="https://www.instagram.com/tamd_n11/" class="instagram"><i class="icofont-instagram"></i></a>
         <a href="#" class="google-plus"><i class="icofont-skype"></i></a>
         <a href="https://www.linkedin.com/in/iamtamodip/" class="linkedin"><i class="icofont-linkedin"></i></a>
       </div>
