--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       <div class="social-links">
         <a href="https://twitter.com/iam_tamodip" class="twitter"><i class="icofont-twitter"></i></a>
         <a href="https://www.facebook.com/iamtamodip" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="https://www.instagram.com/tamd_n11/" class="instagram"><i class="icofont-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="icofont-skype"></i></a>
+        <a href="https://www.instagram.com/tom_221b/" class="instagram"><i class="icofont-instagram"></i></a>
+        <a href="https://github.com/iamtamodip" class="github"><i class="icofont-github"></i></a>
         <a href="https://www.linkedin.com/in/iamtamodip/" class="linkedin"><i class="icofont-linkedin"></i></a>
       </div>
 
@@ -85,7 +85,7 @@
                 <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 4 April 2000</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 8777-735-595</li>
-                <li><i class="icofont-rounded-right"></i> <strong>City:</strong>Kolkata, India</li>
+                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Kolkata, India</li>
               </ul>
             </div>
             <div class="col-lg-6">
@@ -98,7 +98,8 @@
             </div>
           </div>
           <p>
-            My first love is cricket, and Engineering is my passion. I am a Marvel fan and also Sherlock Addicted.
+            I'm Karate kid and my first love is cricket. <br>
+            Also a Marvel fan and Sherlock Addicted.
           </p>
         </div>
       </div>
@@ -117,7 +118,7 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">HTML <i class="val">100%</i></span>
+            <span class="skill">HTML <i class="val">100%%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -197,14 +198,6 @@
             <h4>Core committee member</h4>
             <h5>2019 - Present</h5>
             <p><em>IEEE Jadavpur University Students Branch </em></p>
-          </div>
-          <div class="resume-item">
-            <h4>Organising Commitee Member</h4>
-            <h5>Nov 2019 - Mar 2020</h5>
-            <p><em>TechX Congress</em></p>
-            <p>
-            Part of the organising commitee of the mega event first time hosted by IEEE Kolkata Section.
-            </p>
           </div>
         </div>
       </div>
