--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </div>
           </div>
           <p>
-            I'm Karate kid and my first love is cricket. <br>
+            I'm a Karate kid and my first love is cricket. <br>
             Also a Marvel fan and Sherlock Addicted.
           </p>
         </div>
