--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Web Developer</h3>
           <p class="font-italic">
-            A tech enthusiastic and trustworthy student pursuing bacherlor of Electrical Engineering at Jadavpur University, Kolkata.         </p>
+            An enthusiastic and trustworthy student pursuing bacherlor of Electrical Engineering at Jadavpur University, Kolkata.         </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
