--- a/index.html
+++ b/index.html
@@ -76,9 +76,6 @@
           <img src="assets/img/tamodip.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Web Developer</h3>
-          <p class="font-italic">
-            An enthusiastic and trustworthy student pursuing bacherlor of Electrical Engineering at Jadavpur University, Kolkata.         </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
@@ -97,10 +94,16 @@
               </ul>
             </div>
           </div>
-          <p>
-            I'm a Karate kid and my first love is cricket. <br>
-            Also a Marvel fan and Sherlock Addicted.
-          </p>
+          <div class="KnowMore">
+            <h3>Know More</h3>
+            <p class="font-italic">
+              I'm a tech enthusiast. <br>
+              I aspire to become a computer scientist.
+              I 🖤 to code. Keenly interested in AI, Machine Learning, Data Science, Web Development, Android Development.<br>
+              I am also a Karate Kid. I'm a black belt holder since 2016.<br>
+              I love to watch movies and web series. Hence, I'm a Potterhead ⌁☍ MARVEL fan and Sherlock addicted too.
+            </p>
+          </div>
         </div>
       </div>
 
@@ -125,9 +128,9 @@
           </div>
 
           <div class="progress">
-            <span class="skill">CSS <i class="val">85%</i></span>
+            <span class="skill">CSS <i class="val">80%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
@@ -150,9 +153,9 @@
           </div>
 
           <div class="progress">
-            <span class="skill">C<i class="val">80%</i></span>
+            <span class="skill">C<i class="val">85%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
