--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 4 April 2000</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.wizardingworld.com</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 8777-735-595</li>
                 <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Kolkata, India</li>
               </ul>
