--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
-            <h4>Core committee member</h4>
+            <h4>Executive committee member</h4>
             <h5>2019 - Present</h5>
             <p><em>IEEE Jadavpur University Students Branch </em></p>
           </div>
