--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="social-links">
         <a href="https://twitter.com/iam_tamodip" class="twitter"><i class="icofont-twitter"></i></a>
         <a href="https://www.facebook.com/iamtamodip" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="https://www.instagram.com/tamd_n11/" class="instagram"><i class="icofont-instagram"></i></a>
+        <a href="https://www.instagram.com/tamodip_221b/" class="instagram"><i class="icofont-instagram"></i></a>
         <a href="https://github.com/iamtamodip" class="github"><i class="icofont-github"></i></a>
         <a href="https://www.linkedin.com/in/iamtamodip/" class="linkedin"><i class="icofont-linkedin"></i></a>
       </div>
@@ -245,7 +245,7 @@
             <h3>Social Profiles</h3>
             <div class="social-links">
               <a href="https://www.facebook.com/iamtamodip" class="facebook"><i class="icofont-facebook"></i></a>
-              <a href="https://www.instagram.com/tamd_n11/" class="instagram"><i class="icofont-instagram"></i></a>
+              <a href="https://www.instagram.com/tamodip_221b/" class="instagram"><i class="icofont-instagram"></i></a>
               <a href="https://twitter.com/iam_tamodip" class="twitter"><i class="icofont-twitter"></i></a>
               <a href="https://github.com/iamtamodip" class="github"><i class="icofont-github"></i></a>              <a href="https://www.linkedin.com/in/iamtamodip/" class="linkedin"><i class="icofont-linkedin"></i></a>
             </div>
