--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 20</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> iamtamodip@gmail.com</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> tamodip.221b@gmail.com</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
               </ul>
             </div>
@@ -256,7 +256,7 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <p>iamtamodip@gmail.com</p>
+            <p>tamodip.221b@gmail.com</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
