--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <p class="font-italic">
               I'm a tech enthusiast. <br>
               I aspire to become a computer scientist.
-              I 🖤 to code. Keenly interested in AI, Machine Learning, Data Science, Web Development, Android Development.<br>
+              I 🖤 to code. Keenly interested in AI, Machine Learning, Web Development, Android Development, Internet of Things.<br>
               I am also a Karate Kid. I'm a black belt holder since 2016.<br>
               I love to watch movies and web series. Hence, I'm a Potterhead ⌁☍ MARVEL fan and Sherlock addicted too.
             </p>
