--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                   </li>
                   <li>
                     <i class="icofont-rounded-right"></i>
-                    <strong>Website:</strong> www.wizardingworld.com
+                    <strong>Website:</strong> https://www.tamodipdas.ml/
                   </li>
                   <li>
                     <i class="icofont-rounded-right"></i>
@@ -129,7 +129,7 @@
                 <ul>
                   <li>
                     <i class="icofont-rounded-right"></i>
-                    <strong>Age:</strong> 20
+                    <strong>Age:</strong> 21
                   </li>
                   <li>
                     <i class="icofont-rounded-right"></i>
@@ -149,10 +149,10 @@
             <div class="KnowMore">
               <h3>Know More</h3>
               <p class="font-italic">
-                I'm a tech enthusiast. <br />
-                I aspire to become a computer scientist. I 🖤 to code. Keenly
-                interested in AI, Machine Learning, Web Development, Android
-                Development, Internet of Things.<br />
+                I'm a tech enthusiast.<br />
+                I aspire to become a software developer. I'm passionate about
+                computers & programming. I 🖤 to code. Keenly interested in AI,
+                Machine Learning, Web Development, Internet of Things.<br />
                 I am also a Karate Kid. I'm a black belt holder since 2016.<br />
                 I love to watch movies and web series. Hence, I'm a Potterhead
                 ⌁☍ MARVEL fan and Sherlock addicted too.
