--- a/index.html
+++ b/index.html
@@ -70,19 +70,31 @@
         <!-- .nav-menu -->
 
         <div class="social-links">
-          <a href="https://twitter.com/iam_tamodip" class="twitter"
+          <a
+            href="https://twitter.com/iam_tamodip"
+            class="twitter"
+            target="_blank"
             ><i class="icofont-twitter"></i
           ></a>
-          <a href="https://www.facebook.com/iamtamodip" class="facebook"
+          <a
+            href="https://www.facebook.com/iamtamodip"
+            class="facebook"
+            target="_blank"
             ><i class="icofont-facebook"></i
           ></a>
-          <a href="https://www.instagram.com/tamodip_221b/" class="instagram"
+          <a
+            href="https://www.instagram.com/tamodip_221b/"
+            class="instagram"
+            target="_blank"
             ><i class="icofont-instagram"></i
           ></a>
-          <a href="https://github.com/iamtamodip" class="github"
+          <a href="https://github.com/iamtamodip" class="github" target="_blank"
             ><i class="icofont-github"></i
           ></a>
-          <a href="https://www.linkedin.com/in/iamtamodip/" class="linkedin"
+          <a
+            href="https://www.linkedin.com/in/iamtamodip/"
+            class="linkedin"
+            target="_blank"
             ><i class="icofont-linkedin"></i
           ></a>
         </div>
@@ -153,6 +165,7 @@
                 I aspire to become a software developer. I'm passionate about
                 computers & programming. I 🖤 to code. Keenly interested in AI,
                 Machine Learning, Web Development, Internet of Things.<br />
+                Wanna build something cool? Count me in! <br />
                 I am also a Karate Kid. I'm a black belt holder since 2016.<br />
                 I love to watch movies and web series. Hence, I'm a Potterhead
                 ⌁☍ MARVEL fan and Sherlock addicted too.
@@ -323,22 +336,33 @@
               <i class="bx bx-share-alt"></i>
               <h3>Social Profiles</h3>
               <div class="social-links">
-                <a href="https://www.facebook.com/iamtamodip" class="facebook"
+                <a
+                  href="https://www.facebook.com/iamtamodip"
+                  class="facebook"
+                  target="_blank"
                   ><i class="icofont-facebook"></i
                 ></a>
                 <a
                   href="https://www.instagram.com/tamodip_221b/"
+                  target="_blank"
                   class="instagram"
                   ><i class="icofont-instagram"></i
                 ></a>
-                <a href="https://twitter.com/iam_tamodip" class="twitter"
+                <a
+                  href="https://twitter.com/iam_tamodip"
+                  class="twitter"
+                  target="_blank"
                   ><i class="icofont-twitter"></i
                 ></a>
-                <a href="https://github.com/iamtamodip" class="github"
+                <a
+                  href="https://github.com/iamtamodip"
+                  class="github"
+                  target="_blank"
                   ><i class="icofont-github"></i
                 ></a>
                 <a
                   href="https://www.linkedin.com/in/iamtamodip/"
+                  target="_blank"
                   class="linkedin"
                   ><i class="icofont-linkedin"></i
                 ></a>
