--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
               <p class="font-italic">
                 I'm a tech enthusiast.<br />
                 I aspire to become a software developer. I'm passionate about
-                computers & programming. I 🖤 to code. Keenly interested in AI,
-                Machine Learning, Web Development, Internet of Things.<br />
+                computers & programming. Keenly interested in AI, Machine
+                Learning, Web Development and Internet of Things.<br />
                 Wanna build something cool? Count me in! <br />
                 I am also a Karate Kid. I'm a black belt holder since 2016.<br />
                 I love to watch movies and web series. Hence, I'm a Potterhead
